--- a/App_Dragable/src/css/task.css
+++ b/App_Dragable/src/css/task.css
@@ -1,11 +1,12 @@
+
 .card {
     width: 300px;
-    border: 2px solid #ccc;
+    border: 1px solid black;
     border-radius: 10px;
     padding: 10px;
     margin: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
+    background-color: #bdfff6;
     transition: box-shadow 0.3s ease-in-out;
   }
   
@@ -26,4 +27,7 @@
   .estado {
     color: #777;
     font-size: 14px;
+  }
+  .completed {
+    background-color:white;
   }
