--- a/App_Dragable/src/css/tasks.css
+++ b/App_Dragable/src/css/tasks.css
@@ -1,3 +1,4 @@
+
 .trash {
     position: fixed;
     top: 50%;
@@ -14,3 +15,27 @@
   .trash:hover {
     background-color: #d32f2f; /* Cambia el color de fondo al pasar el ratón sobre la papelera */
   }
+
+  .task-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start; /* Alinea las tareas hacia arriba */
+    
+  }
+  
+  .task-item {
+    flex: 0 0 calc(33.33% - 100px); /* 33.33% para que haya tres tareas por fila */
+ /* Espacio entre las tareas */
+  }
+  .pendiente{
+    background-color: red;
+    border-radius: 5px;
+    border: solid black 2px;
+  }
+  .completa{
+    background-color:greenyellow;
+    border-radius: 5px;
+    border: solid black 2px;
+  }
+ 
+  
