--- a/App_Dragable/src/components/Nav.css
+++ b/App_Dragable/src/components/Nav.css
@@ -1,5 +1,6 @@
+
 .navbar {
-    background-color: blue;
+  background-color: blue;
   width: 100%;
   display: flex;
   justify-content: space-around;
@@ -9,27 +10,32 @@
   top: 0;
   left: 0;
   right: 0;
-  }
-  
-  /* .navbar button 
-  {
-    background-color: transparent;
-    border: none;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  
+  z-index: 9999;
+}
+
   .navbar button:hover {
     color: lightblue;
-  } */
-  button{
+  } 
+ 
+.navbar button{
     background:#1AAB8A;
+    color:#fff;
+    border:solid greenyellow;
+    position:relative;
+    height:60px;
+    font-size:1.6em;
+    padding:0 2em;
+    cursor:pointer;
+    transition:800ms ease all;
+    outline:none;
+   
+  }
+  button{
+    background:#431aab;
     color:#fff;
     border:none;
     position:relative;
-    height:60px;
+    height:35px;
     font-size:1.6em;
     padding:0 2em;
     cursor:pointer;
