--- a/App_Dragable/src/css/task.css
+++ b/App_Dragable/src/css/task.css
@@ -1,7 +1,7 @@
 
 .card {
     width: 300px;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 10px;
     padding: 10px;
     margin: 10px;
@@ -30,4 +30,5 @@
   }
   .completed {
     background-color:white;
+    border: solid 1px black;
   }
